@@ -2,6 +2,9 @@
 	* src/files.c (update_poshistory): Do not add directories to the
 	list of file positions.  This fixes Savannah bug #46971.
 	* src/*.c: Adjust some indentation and some line wrapping.
+	* src/prompt.c (do_statusbar_prev_word): When in the middle of a
+	word, jump to the start of the current word, not to the start of
+	the preceding one.  This fixes Savannah bug #46970.
 
 2016-01-25  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (update_poshistory): Handle an update of the first
